@@ -59,7 +59,6 @@ html browsable.
 %install
 %{__rm} -rf %{buildroot}
 %{__make} DESTDIR=%{buildroot} INSTALL="install -p" install
-%{__chmod} 0755 %{buildroot}%{_bindir}/ucommon-config
 %{__rm} %{buildroot}%{_libdir}/*.la
 
 %clean
@@ -86,6 +85,15 @@ html browsable.
 %postun -p /sbin/ldconfig
 
 %changelog
+* Sun Jul 19 2009 - David Sugar <dyfet@gnutelephony.org> - 1.0.6-1
+- fixed ucommon-config upstream.
+
+* Tue May 05 2009 - David Sugar <dyfet@gnutelephony.org> - 1.0.5-4
+- removed static libraries, fixed other build issues (#498736)
+
+* Sun May 03 2009 - David Sugar <dyfet@gnutelephony.org> - 1.0.5-3
+- spec file further revised for redhat/fedora (#498736)
+
 * Sat May 02 2009 - David Sugar <dyfet@gnutelephony.org>
 - spec file prepared for redhat/fedora submission.
 
